--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "minimist": "^1.2.5"
+  }
 }
